--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "clipper-test",
   "version": "1.0.0",
   "description": "",
-  "main": "clipper.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node clipper.js"
+    "serve": "node index.js"
   },
   "repository": {
     "type": "git",
